# LogiChain

./: .env  AGENTS.md  Makefile  README.md  TFM2-state.json  TOPICS.md  montar en un dominio.txt  notas TFM2.txt
.github/: CODEOWNERS
backup-states/: ssssss.json
broadcast/AlimentosCongelados.s.sol/31337/: run-1774644684804.json  run-1775565411829.json  run-1775567560166.json  run-1775596409346.json  run-1775598942698.json  run-1775607887783.json  run-1775613898082.json  run-1775614800570.json  run-1775615273972.json  run-1775643103215.json  run-1775644350868.json  run-1775645353632.json  run-1775653684727.json  run-1775690994543.json
broadcast/CheckpointsDemo.s.sol/31337/: run-1774644681951.json  run-1775565381733.json  run-1775567556287.json  run-1775596402886.json  run-1775598935426.json  run-1775607879249.json  run-1775613888471.json  run-1775614793567.json  run-1775615267689.json  run-1775643098914.json  run-1775644346604.json  run-1775645347992.json  run-1775653680912.json  run-1775690990802.json
broadcast/Demo15Shipments.s.sol/31337/: run-1775929802711.json  run-1775934090204.json  run-1775940792530.json  run-1775995924653.json  run-1775996579363.json  run-1775996954513.json  run-1775997175766.json  run-1775997399092.json  (+15 more)
cache/: solidity-files-cache.json
digiformas/: README.md
digiformas/apps/api/: Cargo.toml  README.md
digiformas/apps/api/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
digiformas/docs/: ARQUITECTURA.md
logistics-frontend/: index.html  tsconfig.tsbuildinfo  vite.config.ts
logistics-frontend/src/: App.tsx  shared.tsx
(+94 files in other folders)
